@@ -1,3 +1,8 @@
+2004-11-10  Nate Nielsen <nielsen@memberwebs.com>
+
+	* libseahorse/seahorse-op.c: Fix encryption of text. Force armor
+	mode when necessary 
+	
 2004-11-09  Nate Nielsen <nielsen@memberwebs.com>
 
 	* configure.in: Better message on the GPG version check
